--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -313,7 +313,7 @@ Userspace program must call BPF syscall to insert program info kernel
 Luckily libbpf library written to help make this easier for developers
 #+BEGIN_SRC C
 struct bpf_object *obj;
-int prof_fd;
+int prog_fd;
 
 struct bpf_prog_load_attr prog_load_attr = {
 	.prog_type      = BPF_PROG_TYPE_XDP,
