Looking into ELF section and function names
The ELF section name can be searched/found by libbpf via
API call bpf_object__find_program_by_title(obj, "prog_name").
While there is not libbpf API to find/get via C-function name.

BUT bpftool is only listing the C-function name (perhaps
the ELF section name isn't know any longer?).

Add comment in code example to hint this.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -265,8 +265,8 @@ How do you code these XDP programs?
 ** Slide: XDP restricted-C code example : Drop UDP                   :export:
 
 #+BEGIN_SRC C
-SEC("xdp1") /* Marks first eBPF program section in ELF-binary */
-int xdp_prog_drop_all_UDP(struct xdp_md *ctx) /* Name visible with bpftool */
+SEC("xdp_drop_UDP") /* section in ELF-binary and "program_by_title" in libbpf */
+int xdp_prog_drop_all_UDP(struct xdp_md *ctx) /* "name" visible with bpftool */
 {
 	void *data_end = (void *)(long)ctx->data_end; void *data = (void *)(long)ctx->data;
 	struct ethhdr *eth = data; u64 nh_off; u32 ipproto = 0;
