--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -284,10 +284,9 @@ struct bpf_object *obj;
 int prog_fd;
 
 struct bpf_prog_load_attr prog_load_attr = {
-	.prog_type      = BPF_PROG_TYPE_XDP,
+	.prog_type = BPF_PROG_TYPE_XDP,
+	.file      = "xdp1_kern.o",
 };
-
-prog_load_attr.file = "xdp1_kern.o"
 
 if (bpf_prog_load_xattr(&prog_load_attr, &obj, &prog_fd))
 	return EXIT_FAILURE;
@@ -300,9 +299,10 @@ obj and prog_fd are set.
 #+BEGIN_SRC C
 struct bpf_object *obj;
 int prog_fd;
-struct bpf_prog_load_attr prog_load_attr = { .prog_type = BPF_PROG_TYPE_XDP };
-
-prog_load_addr.file = "xdp_udp_drop_kern.o"
+struct bpf_prog_load_attr prog_load_attr = {
+	.prog_type = BPF_PROG_TYPE_XDP,
+	.file      = "xdp_udp_drop_kern.o",
+};
 
 if (bpf_prog_load_xattr(&prog_load_attr, &obj, &prog_fd) == 0) {
 	const char *prog_name = "xdp_drop_UDP"; /* ELF "SEC" name */
