--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -322,8 +322,9 @@ Possible to have several eBPF program in one object file
 Now that a program is loaded (remember prog_fd set in the last snippet shown), attach it to a netdev
 
 #+BEGIN_SRC C
-static int ifindex = 2;  /* in this case eth0 is ifindex 2 */
+#include <"net/if.h"> /* if_nametoindex */
 static __u32 xdp_flags = XDP_FLAGS_DRV_MODE /* or XDP_FLAGS_SKB_MODE */
+static int ifindex = if_nametoindex("eth0");
 
 if (bpf_set_link_xdp_fd(ifindex, prog_fd, xdp_flags) < 0) {
 	printf("link set xdp fd failed\n");
