Fix spelling mistake
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -363,7 +363,7 @@ if (value)
 
 ** Slide: Accessing eBPF map from user space                       :export:
 
-Since BPF maps can bee used to communicate information (statistics in this example)
+Since BPF maps can be used to communicate information (statistics in this example)
 between the BPF program easily.  First locate the map:
 
 #+BEGIN_SRC C
