Splitup userspace map access slides in two
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -361,7 +361,7 @@ if (value)
 	/* PERCPU maps don't need: __sync_fetch_and_add(value, 1); */
 #+END_SRC
 
-** Slide: Accessing eBPF map from user space                       :export:
+** Slide: Accessing eBPF map from user space (1/2)                   :export:
 
 Since BPF maps can be used to communicate information (statistics in this example)
 between the BPF program easily.  First locate the map:
@@ -374,6 +374,10 @@ if (!map) {
 }
 map_fd = bpf_map__fd(map);
 #+END_SRC
+
+Map file descriptor (/map_fd/) needed to interactive with BPF syscall
+
+** Slide: Accessing eBPF map from user space (2/2)                   :export:
 
 Now the map contents can be accessed like this:
 #+BEGIN_SRC C
